material/manifests/vulnapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vulnapp
spec:
  type: NodePort
  selector:
    app: vulnapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32080
