material/manifests/zipapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipapp
spec:
  type: NodePort
  selector:
    app: zipapp
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 32080
