material/manifests/isolate-tainted-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: isolate-tainted-pods
spec:
  endpointSelector:
    matchLabels:
      tainted-by-falco: "true"
  ingress: []
  egress: []
